# LangTutor

./: README.md  manage.py  pyproject.toml
apps/tutor/: admin.py  apps.py  forms.py  mistral_api.py  models.py  tests.py  urls.py  views.py
apps/tutor/migrations/: 0001_initial.py  0002_alter_lesson_content_chatsession_chatmessage.py
apps/tutor/static/tutor/css/: styles.css
apps/tutor/templates/tutor/: base.html  chat.html  home.html  lesson.html
langtutor/: asgi.py  settings.py  urls.py  wsgi.py
