[tool.poetry]
name = "langtutor"
version = "0.1.0"
description = "Educational Django web application with Mistral LLM integration for language learning."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"
requests = "^2.28.1"
urllib3 = ">=1.26,<2.0"
mistralai = "1.5.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
